# embedded-foundation-lib

./: .gitignore  CMakeLists.txt
ADC/: Adc.c  Adc.h  Adc_private.h
Button/: Button.c  Button.h
Buzzer/: Buzzer.h
Dispatcher/: Dispatcher.c  Dispatcher.h
ElevatorFSM/: ElevatorFSM.c  ElevatorFSM.h
Fan/: Fan.c  Fan.h
FloorLED/: FloorLED.c  FloorLED.h
GPIO/: GPIO.c  GPIO.h
IPC/: Ipc.c  Ipc.h
Keypad/: Keypad.c  Keypad.h
Lcd/: Lcd.c  Lcd.h
Led/: Led.c  Led.h
LedBar/: LedBar.h  Ledbar.c
Motor/: Motor.c  Motor.h
Nvic/: Nvic.c  Nvic.h  Nvic_private.h
PWM/: PWM.c  PWM.h
RCC/: RCC.c  RCC.h  RCC_private.h
SPI/: Spi.c  Spi.h
Scheduler/: Scheduler.c  Scheduler.h
SevenSeg/: SevenSeg.c  SevenSeg.h
System/: System.c  System.h
Timer/: Timer.c  Timer.h  Timer_Private.h
Usart/: Usart.c  Usart.h
Utils/: Utils.c  Utils.h
app/: App.c  App.h  App_Slave.c  app.c  app.h
cmake/: ArmToolchain.cmake  IncludeList.cmake  SourceList.cmake
elevator/: elevator.h
exti/: exti.c  exti.h  exti_private.h
include/: BIT_MATH.h  Buzzer.h  GPIO.h  GPIO_private.h  Keypad.h  Keypad_private.h  LedBar.h  MemScanner.h  Message.h  STD_TYPES.h  SevenSeg.h  SevenSeg_private.h  System.h  app.h  exti_private.h
lm35/: lm35.c  lm35.h
src/: Buzzer.c  GPIO.c  Keypad.c  Keypad_private.c  Ledbar.c  MemScanner.c  Message.c  RCC.c  SevenSeg.c  System.c  app.c  exti.c  main.c
